fix player spite flicker

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -55,7 +55,7 @@ body {
 
 #welcome {
   top: 50%;
-  left: 30%;
+  left: 25%;
 
   position: absolute;
   text-align: center;
